[project]
name = "langgraph-project"
version = "0.1.0"
description = "LangGraph project with modern Python tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.29.0",
    "langchain-anthropic>=0.2.4",
    "langchain-community>=0.3.5",
    "langgraph>=0.2.44",
    "langsmith>=0.1.139",
    "tavily-python>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
requires-python = ">=3.12"